fixed suggestions container height to fit the display height with and without keyboard displayed on mobile

--- a/recipe-roulette.js/src/components/Search/BaseSearch/BaseSearch.module.scss
+++ b/recipe-roulette.js/src/components/Search/BaseSearch/BaseSearch.module.scss
@@ -118,6 +118,8 @@
     transition: all 0.45s cubic-bezier(0.08, 0.82, 0.17, 1);
 }
 .baseSearchActive .suggestionsWrapper {
-    height: 16rem;
+    height: 100svh;
     overflow-y: scroll;
+    padding-bottom: 3rem;
+    box-sizing: border-box;
 }
